purge datastore added
