# docs/swagger.json
@@ -68,6 +68,27 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Purge datastore.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Crdt"
+                ],
+                "summary": "purge datastore",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Crdt"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/crdt/{key}": {
