# pkg/routes/public_routes.go
@@ -19,6 +19,7 @@ func PublicRoutes(app *fiber.App) {
 	v1.Get("/crdt/:key", controllers.GetCrdtValue)
 	v1.Post("/crdt", controllers.PostCrdtValue)
 	v1.Delete("/crdt/:key", controllers.DeleteCrdtValue)
+    v1.Delete("/crdt", controllers.PurgeDatastore)
 
 	v1.Post("/image", controllers.PostImage)
 }
